app/javascript/styles/mastodon/components.scss
/* ... */
.column-header__wrapper {
  position: relative;
  flex: 0 0 auto;
  z-index: 1;

  &.active {
    box-shadow: 0 1px 0 rgba($highlight-text-color, 0.3);

    &::before {
      display: block;
      content: '';
      position: absolute;
      bottom: -13px;
      inset-inline-start: 0;
      inset-inline-end: 0;
      margin: 0 auto;
      width: 60%;
      pointer-events: none;
      height: 28px;
      z-index: 1;
      background: radial-gradient(
        ellipse,
        rgba($ui-highlight-color, 0.23) 0%,
        rgba($ui-highlight-color, 0) 60%
      );
    }
  }

  .announcements {
    z-index: 1;
    position: relative;
  }
}

.column-header__select-row {
  border-width: 0 1px 1px;
  border-style: solid;
  border-color: var(--background-border-color);
  padding: 15px;
  display: flex;
  align-items: center;
  gap: 8px;

  &__checkbox .check-box {
    display: flex;
  }

  &__selection-mode {
    flex-grow: 1;

    .text-btn:hover {
      text-decoration: underline;
    }
  }

  &__actions {
    .icon-button {
      border-radius: 4px;
      border: 1px solid var(--background-border-color);
      padding: 5px;
    }
  }
}

.column-header {
  display: flex;
  font-size: 16px;
  border: 1px solid var(--background-border-color);
  border-radius: 4px 4px 0 0;
  flex: 0 0 auto;
  cursor: pointer;
  position: relative;
  z-index: 2;
  outline: 0;

  &__title {
    display: flex;
    align-items: center;
    gap: 5px;
    margin: 0;
    border: 0;
    padding: 13px;
    padding-inline-end: 0;
    color: inherit;
    background: transparent;
    font: inherit;
    text-align: start;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    flex: 1;

    &:focus-visible {
      outline: $ui-button-icon-focus-outline;
    }
  }

  .column-header__back-button + &__title {
    padding-inline-start: 0;
  }

  .column-header__back-button {
    flex: 1;
    color: $highlight-text-color;

    &.compact {
      flex: 0 0 auto;
      color: $primary-text-color;
    }
  }

  &.active {
    .column-header__icon {
      color: $highlight-text-color;
      text-shadow: 0 0 10px rgba($highlight-text-color, 0.4);
    }
  }

  &:focus,
  &:active {
    outline: 0;
  }

  &__advanced-buttons {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 16px;
    padding-top: 0;

    &:first-child {
      padding-top: 16px;
    }
  }
}

.column-header__buttons {
  height: 48px;
  display: flex;
}

.column-header__links {
  margin-bottom: 14px;
}

.column-header__links .text-btn {
  margin-inline-end: 10px;
}

.column-header__button {
  display: flex;
  justify-content: center;
  align-items: center;
  border: 0;
  color: $darker-text-color;
  background: transparent;
  cursor: pointer;
  font-size: 16px;
  padding: 0 15px;

  &:last-child {
    border-start-end-radius: 4px;
  }

  &:hover {
    color: lighten($darker-text-color, 4%);
  }

  &:focus-visible {
    outline: $ui-button-focus-outline;
  }

  &.active {
    color: $primary-text-color;

    &:hover {
      color: $primary-text-color;
    }

    .icon-sliders {
      transform: rotate(60deg);
    }
  }

  &:disabled {
    color: $dark-text-color;
    cursor: default;
  }
}

.no-reduce-motion .column-header__button .icon-sliders {
  transition: transform 150ms ease-in-out;
}

.column-header__collapsible {
  max-height: 70vh;
  overflow: hidden;
  overflow-y: auto;
  color: $darker-text-color;
  transition:
    max-height 150ms ease-in-out,
    opacity 300ms linear;
  opacity: 1;
  z-index: 1;
  position: relative;

  &.collapsed {
    max-height: 0;
    opacity: 0.5;
  }

  &.animating {
    overflow-y: hidden;
  }

  hr {
    height: 0;
    background: transparent;
    border: 0;
    border-top: 1px solid var(--background-border-color);
    margin: 10px 0;
  }
}

.column-header__collapsible-inner {
  border: 1px solid var(--background-border-color);
  border-top: 0;

  @media screen and (max-width: $no-gap-breakpoint) {
    border-left: 0;
    border-right: 0;
  }
}

.column-header__setting-btn {
  &:hover,
  &:focus {
    color: $darker-text-color;
    text-decoration: underline;
  }
}

.column-header__collapsible__extra + .column-header__setting-btn {
  padding-top: 5px;
}

.column-header__permission-btn {
  display: inline;
  font-weight: inherit;
  text-decoration: underline;
}

.column-header__setting-arrows {
  display: flex;
  align-items: center;
}

.text-btn {
  display: inline-flex;
  align-items: center;
  gap: 4px;
  padding: 0;
  font-family: inherit;
  font-size: inherit;
  color: inherit;
  border: 0;
  background: transparent;
  cursor: pointer;

  .icon {
    width: 13px;
    height: 13px;
  }
}

.column-header__issue-btn {
  color: $warning-red;

  &:hover {
    color: $error-red;
    text-decoration: underline;
  }
}

.loading-indicator {
  color: $dark-text-color;
  font-size: 12px;
  font-weight: 400;
  text-transform: uppercase;
  overflow: visible;
  position: absolute;
  top: 50%;
  inset-inline-start: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  align-items: center;
  justify-content: center;
}

.button .loading-indicator {
  position: static;
  transform: none;

  .circular-progress {
    color: $primary-text-color;
    width: 22px;
    height: 22px;
  }
}

.circular-progress {
  color: lighten($ui-base-color, 26%);
  animation: 1.4s linear 0s infinite normal none running simple-rotate;

  circle {
    stroke: currentColor;
    stroke-dasharray: 80px, 200px;
    stroke-dashoffset: 0;
    animation: circular-progress 1.4s ease-in-out infinite;
  }
}

@keyframes circular-progress {
  0% {
    stroke-dasharray: 1px, 200px;
    stroke-dashoffset: 0;
  }

  50% {
    stroke-dasharray: 100px, 200px;
    stroke-dashoffset: -15px;
  }

  100% {
    stroke-dasharray: 100px, 200px;
    stroke-dashoffset: -125px;
  }
}

@keyframes simple-rotate {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}
/* ... */

